.provarCaches/00D410000011HE0EAM/objects/rstk__peitem__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_peitem</customHelpPage>
    <description>peitem__c: This table is used to define Items that are manufactured and/or sold by your company. These Items are typically created by a design engineering function within the company.</description>
    <fields>
        <fullName>Item_Desc_proper__c</fullName>
        <label>Item Desc proper</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Company__c</fullName>
        <formula>rstk__peitem_div__r.rstk__sydiv_cmpno__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__DO_NOT_PACKAGE_TEST_NAME__c</fullName>
        <label>DO NOT PACKAGE TEST NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>56</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_Company__c</fullName>
        <description>Company</description>
        <formula>rstk__peitem_div__r.rstk__sydiv_cmpno__r.Name</formula>
        <inlineHelpText>Identifies the Company that this Division is associated with.</inlineHelpText>
        <label>Company (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_centralizedenggInd__c</fullName>
        <description>Centralized Engineering Indicator</description>
        <formula>rstk__peitem_div__r.rstk__sydiv_cmpno__r.rstk__sycmp_engdivind__c</formula>
        <inlineHelpText>Designates whether the company will have a centralized &amp;quot;repository&amp;quot; (Division) for maintaining Engineering Item Masters, BOMs, Revisions and ECOs. When checked, the Centralized Eng Divison needs to be identified on the Company record.</inlineHelpText>
        <label>Centralized Engineering Indicator (Text)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__peitem_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;  rstk__peitem_item__c &amp; IF(ISBLANK( rstk__peitem_invrev__c ), &apos;&apos;, (&apos;_&apos; &amp; rstk__peitem_invrev__c))</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_item__c</fullName>
        <formula>rstk__peitem_item__c &amp; ( IF(ISBLANK(rstk__peitem_invrev__c), &apos;&apos;, (&apos;-Rev:&apos; &amp; rstk__peitem_invrev__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_longname__c</fullName>
        <formula>(rstk__peitem_item__c &amp; ( IF(ISBLANK(rstk__peitem_invrev__c), &apos;&apos;, (&apos;-Rev:&apos; &amp; rstk__peitem_invrev__c)) ) &amp; &apos; (&apos; &amp; rstk__peitem_descr__c) &amp; &apos;)&apos;</formula>
        <inlineHelpText>Internal formula for constructing the associated field.</inlineHelpText>
        <label>Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT((rstk__peitem_item__c &amp; ( IF(ISBLANK(rstk__peitem_invrev__c), &apos;&apos;, (&apos;-Rev:&apos; &amp; rstk__peitem_invrev__c)) ) &amp; &apos; (&apos; &amp; rstk__peitem_descr__c), 79) &amp; &apos;)&apos;</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_respeng__c</fullName>
        <formula>IF(rstk__peitem_respengind__c,  rstk__peitem_iccomcod__r.rstk__iccomcod_respeng__r.Name , rstk__peitem_respeng__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Engineer responsible for defining and controlling changes to this part.</inlineHelpText>
        <label>Responsible Engineer (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__peitem_iccomcod__r.rstk__iccomcod_comcod__c + &apos; &apos; +  rstk__peitem_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__peitem_respeng__r.rstk__syusr_employee__c + &apos; &apos; +  rstk__peitem_invdiv__r.rstk__sydiv_div__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__index_item__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Internal Index</inlineHelpText>
        <label>Index - Itemno</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__inv_attributes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_activestsdate__c</fullName>
        <description>The date when the status is changed to ACTIVE (or date of record creation if initial status is ACTIVE). 

This field is not displayed on the Engineering Item Master maintenance form. (DD)</description>
        <inlineHelpText>The date when the status is changed to ACTIVE (or date Item created, if initial status is ACTIVE).</inlineHelpText>
        <label>Active Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_descr__c</fullName>
        <description>User  defined descriptive Name of the item. (DD)</description>
        <inlineHelpText>User  defined description. This description is displayed throughout the Rootstock product in combination with the associated Item Number.</inlineHelpText>
        <label>Item Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_disassmind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disassembly Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the core organizational unit. This is typically the plant where the manufacturing is performed, as well as the receipt of purchased material, and fulfillment of sales orders.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Engineering Item Master (Division)</relationshipLabel>
        <relationshipName>divpeitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_enguom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Engineering Unit of Measure. There can be different Units of Measure for Purchasing, Inventory, and Sales Orders, with appropriate conversion factors maintained in the Rootstock software to process.</inlineHelpText>
        <label>Eng UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Engineering Item Master</relationshipLabel>
        <relationshipName>PEITEMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_fifoind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox  

The default is ‘F’  

If the SYCMP_FIFOACT is not ‘T’ then this field is not enabled. 

If the SYDIV_COSTTYPE is not ‘W’ then this field is not enabled. 

If this is ‘T’ then this indicates that this item will have FIFO costing applied (versus Weighted Average). 

This can only be set to ‘T’ if: 

PEITEM_SRC = ‘P’ (purchased) 

SYCMP_FIFOACT = ‘T’ (FIFO Active for this company) 

SYDIV_COSTTYPE = ‘W’ (Weighted Average Cost) 

All inventory divisions whose ICITEM_ENGDIVOVR = PEITEM_DIV or whose ICITEM_DIV = PEITEM_DIV must have a source code = ‘P’ (Purchased) 

In a multi division environment, if an item is set to ‘fifo costing’ in one division then it must be set to fifo costing in all divisions within the company. (DD)</description>
        <inlineHelpText>When checked, this indicates that costing for this item will be done on a first-in-first-out (FIFO) basis. This is only applicable under Moving Average Cost cost method.</inlineHelpText>
        <label>FIFO Cost Method Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_hazardmtl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD - H</inlineHelpText>
        <label>Hazardous Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_iccomcod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Sets default values for Inventory Source, Responsible Engineer and Engineering UOM (which can be overridden). (DD)</description>
        <inlineHelpText>This is the Commodity Code associated with this Item. When adding a new item, the C.C. is used to default Inv Source, Lot &amp; Serial Tracking, Eng UOM &amp; Resp Engineer, along with values needed to add the Inv Item Master &amp; PO Item Master (if applicable).</inlineHelpText>
        <label>Commodity Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__iccomcod__c.rstk__iccomcod_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__peitem_invdiv__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>Engineering Item Master</relationshipLabel>
        <relationshipName>PEITEMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_inactivests__c</fullName>
        <description>Possible values are  

Null – which indicates that the Item is ACTIVE (default) or PENDING 

‘I’ – which indicates that the Item is no longer active. (This is also set to ‘I’ when an item is considered obsolete) 

‘W’ – which indicates that the Item will soon be ‘inactive’ and a warning error is given when a transaction occurs. (DD)</description>
        <inlineHelpText>If checked, the item is inactive and can not be on an active bom.</inlineHelpText>
        <label>Inactive Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__peitem_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Inventory Div is only relevant for Companies with Centralized Engineering active (see COMPANY in Common Fields/Concepts Section) and determines the division for which the Inventory Item Master will be created (assuming the Status is ACTIVE and the Eng Type is STANDARD).  

In non-centralized engineering companies, the division for the Engineering Item Master and Inventory Item Master is the same. 

In a centralized engineering situation, there could be many inventory divisions accessing the single engineering division.  The real purpose of this field is to support a ‘costed bill of material report’ from an engineering perspective, given that ‘costs’ are carried at the inventory division level. (DD)</description>
        <inlineHelpText>Division is the core organizational unit. The Inventory Division is typically where the manufacturing is performed, as well as the receipt of purchased material, and fulfillment of sales orders.</inlineHelpText>
        <label>Inventory Division</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__sydiv__c.rstk__sydiv_invdivappl__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Engineering Item Master (Inventory Division)</relationshipLabel>
        <relationshipName>invdivpeitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_invpeitemrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the associated Engineering Revision for the Inventory Revision Master Item.</inlineHelpText>
        <label>Inventory Revision Master Link</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>Engineering Item Master</relationshipLabel>
        <relationshipName>peitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_invrev__c</fullName>
        <inlineHelpText>The Engineering Revision (against the Inventory Revision Master Item) that spawned the creation of this Item.</inlineHelpText>
        <label>Inventory Revision</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_invrevitem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this item was created from an Inventory Revision Master Item.</inlineHelpText>
        <label>Inventory Revision Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_invrevmaster__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, denotes that this item is an Inventory Revision Master. As such, it will spawn another Item Master that will be used on BOMs, used in Inventory, etc. The &quot;master&quot; item is the vehicle for revisions that will spawn new items for each revision.</inlineHelpText>
        <label>Inventory Revision Master Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_invrevprod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Multi-Revision Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_item__c</fullName>
        <inlineHelpText>A unique alpha-numeric identifier of this record.  Up to 50 characters.</inlineHelpText>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_itemtype__c</fullName>
        <inlineHelpText>Direct Material or Labor Only.  Once selected while creating a new engineering item, this field may not be changed.</inlineHelpText>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Labor Only</fullName>
                </value>
                <value>
                    <fullName>Direct Material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__peitem_lockdescr_ui__c</fullName>
        <inlineHelpText>TBD - H</inlineHelpText>
        <label>lockdescr_ui</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_lockid_ui__c</fullName>
        <inlineHelpText>TBD - H</inlineHelpText>
        <label>Lock ID</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_respeng__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Engineer responsible for defining and controlling changes to this part.</inlineHelpText>
        <label>Responsible Engineer</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Engineering Item Master</relationshipLabel>
        <relationshipName>PEITEMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_respengind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD - H</inlineHelpText>
        <label>Responsible Engineer Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_src_pl__c</fullName>
        <description>Inventory sources are: 

PURCHASED 
Purchased items are purchased via a PO and received into inventory with an Item Receipt operation. 

MANUFACTURED 
Manufactured items are manufactured “in house” and received into inventory with a WO receipt operation. 

SUBCONTRACT 
Subcontract items are purchased from an outside vendor and some or all of the component items, as defined by the BOM, may be supplied from inventory to that subcontract vendor.). (DD)</description>
        <inlineHelpText>Source codes are: PURCHASED - Items purchased for Inventory via a Purchase Order. MANUFACTURED - Items assembled in house for Inventory via a Work Order. SUBCONTRACT - Items assembled by a Vendor from components supplied to the Vendor.</inlineHelpText>
        <label>Inventory Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Manufactured</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Subcontract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__peitem_srcdivovr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD - H</inlineHelpText>
        <label>Source Division Override</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Engineering Item Master (Source Division Override)</relationshipLabel>
        <relationshipName>PEITEMs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_status_pl__c</fullName>
        <description>ACTIVE status, the Inventory Item Master record is automatically created for this item whereas when it is created with PENDING status only the Engineering Item Master record itself is created. 
When a Standard Engineering item’s status is changed from PENDING to ACTIVE the Inventory Item Master record is created. When the status is changed from ACTIVE to PENDING (which is only allowed if no operations have yet been performed with the associated Inventory Item Master), the Inventory Item Master is deleted leaving only the Engineering Item Master. 

A PENDING status Engineering Item is not operational ACTIVE status items on the other hand are fully operational. 

PENDING status Phantom items are similar to PENDING Standard items. When the status of a Phantom item is changed from PENDING to ACTIVE the Inventory Item Master record is NOT automatically created, however, it can be created later manually if needed. 
no difference between PENDING and ACTIVE status for Reference Items (DD</description>
        <inlineHelpText>Status values are ACTIVE (default) or PENDING. When a new Engineering item is created with ACTIVE status, the Inventory Item record is automatically created.. When it is created with PENDING status, only the Engineering Item record is created.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__peitem_storagecode__c</fullName>
        <inlineHelpText>TBD - H</inlineHelpText>
        <label>Storage Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_trackcond__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD - H</inlineHelpText>
        <label>Track Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_trackinvunits__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When Checked, units are tracked.</inlineHelpText>
        <label>Track Units in Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_tracklot_pl__c</fullName>
        <description>Valid values are True or False 

This is a drop down with the values of ‘I’ (Yes) and ‘N’ (No). 

Many places in the document we use the value of ‘I’ and ‘Y’ interchangeably 

When Lot Tracking is enabled for this item (Y) this item is handled in inventory in lots (see LOT CONTROL in Common Fields/Concepts Section). 

An item can be both Lot and Serial Tracked.  From on inventory control standpoint the Item is Serial Tracked – but with the ability to designate a Lot Number at the time the Serial Number is specified.  For example on a purchase order receipt of a serial tracked item, if a lot number is designated, then the lot number is stamped on the ICITEMSRL record – but for all other purposes the Item is considered ‘Serial Tracked’.  Likewise when a each Work Order Assembly is assigned a serial number, the ICITEMSRL_LOTNO is stamped with the WOCST_LOTNO. (DD)</description>
        <inlineHelpText>Determines if this item is controlled by lot number.  Valid values are &apos;Yes&apos;, it IS controlled by lot,  or &apos;No&apos;, it is not.  Items may be both lot and serial controlled, either lot or serial controlled, or neither.</inlineHelpText>
        <label>Lot Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__peitem_trackrev__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD - H</inlineHelpText>
        <label>Track Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__peitem_tracksrl_pl__c</fullName>
        <description>Valid values are True or False 

This is a drop down with the values of ‘I’ (Yes) and ‘N’ (No) 

Many places in the document we use the value of ‘I’ and ‘Y’ interchangeably 

When Serial Tracking is enabled for this item (Y) this item is handled individually in inventory with individually assigned serial numbers (see SERIAL CONTROL in Common Fields/Concepts Section). (DD)</description>
        <inlineHelpText>&apos;Y&apos; indicates that this item is tracked by serial number. Valid values are &apos;Y&apos; or &apos;N&apos;.  Items may be both lot and serial tracked, either lot OR serial tracked, or not tracked by either option.</inlineHelpText>
        <label>Serial Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__peitem_type_pl__c</fullName>
        <description>Standard
Most items will have an Eng Item Type of Standard. A Standard type represents a real physical item. Standard items will have at least one associated Inventory item (assuming the PEITEM_STATUS is Active - see below). 

Phantom 
Phantom items are used as a logic “node” in a BOM tree – as the BOM is processed, as in MRP, the children of the Phantom item are substituted in place of the Phantom item (and the qty per adjusted accordingly). Phantom items, being a logical concept, are typically not stored in inventory and thus are not created with an associated Inventory Item Master. For rare exceptions there may be need to store a Phantom component in inventory in which case it is possible to create an Inventory Item Master for that item so that inventory operations can be performed on it. 

Reference 
 is not operational and is not stored in inventory and has no costs associated with it (it is simply a note to the engineer, to denote some future engineering. (DD)</description>
        <inlineHelpText>Valid Engineering Types are: Standard, Phantom, or Reference.</inlineHelpText>
        <label>Eng Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phantom</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__peitem_unituomdescr__c</fullName>
        <inlineHelpText>Description</inlineHelpText>
        <label>Units UOM Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Engineering Item Master</label>
    <listViews>
        <fullName>Engineering_Item_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__peitem_div__c</columns>
        <columns>rstk__peitem_item__c</columns>
        <columns>rstk__peitem_iccomcod__c</columns>
        <columns>rstk__peitem_fifoind__c</columns>
        <columns>rstk__peitem_type_pl__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__peitem_tracklot_pl__c</columns>
        <columns>rstk__peitem_tracksrl_pl__c</columns>
        <columns>rstk__peitem_status_pl__c</columns>
        <columns>rstk__peitem_src_pl__c</columns>
        <columns>rstk__peitem_enguom__c</columns>
        <columns>rstk__peitem_invdiv__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__peitem_disassmind__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Engineering Item Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Engineering_Item_Master_Colorado</fullName>
        <columns>NAME</columns>
        <columns>rstk__peitem_div__c</columns>
        <columns>rstk__peitem_item__c</columns>
        <columns>rstk__peitem_descr__c</columns>
        <columns>rstk__peitem_iccomcod__c</columns>
        <columns>rstk__peitem_src_pl__c</columns>
        <columns>rstk__peitem_tracklot_pl__c</columns>
        <columns>rstk__peitem_tracksrl_pl__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__peitem_div__c</field>
            <operation>contains</operation>
            <value>colo</value>
        </filters>
        <label>Engineering Item Master - Colorado</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Engineering_Item_Master_MS</fullName>
        <booleanFilter>1 AND (2 OR  3)</booleanFilter>
        <columns>rstk__peitem_disassmind__c</columns>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__peitem_div__c</columns>
        <columns>rstk__peitem_item__c</columns>
        <columns>rstk__peitem_iccomcod__c</columns>
        <columns>rstk__peitem_fifoind__c</columns>
        <columns>rstk__peitem_type_pl__c</columns>
        <columns>rstk__peitem_tracklot_pl__c</columns>
        <columns>rstk__peitem_tracksrl_pl__c</columns>
        <columns>rstk__peitem_status_pl__c</columns>
        <columns>rstk__peitem_src_pl__c</columns>
        <columns>rstk__peitem_enguom__c</columns>
        <columns>rstk__peitem_invdiv__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__peitem_div__c</field>
            <operation>contains</operation>
            <value>Colorado (100</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>MS-serial and lot trac</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Pro-child4 (NO Track)</value>
        </filters>
        <label>MS_Engineering Item Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Engineering_Item_Master_PK</fullName>
        <columns>rstk__peitem_invrev__c</columns>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__peitem_div__c</columns>
        <columns>rstk__peitem_item__c</columns>
        <columns>rstk__peitem_iccomcod__c</columns>
        <columns>rstk__peitem_fifoind__c</columns>
        <columns>rstk__peitem_type_pl__c</columns>
        <columns>rstk__peitem_tracksrl_pl__c</columns>
        <columns>rstk__peitem_tracklot_pl__c</columns>
        <columns>rstk__peitem_status_pl__c</columns>
        <columns>rstk__peitem_src_pl__c</columns>
        <columns>rstk__peitem_invdiv__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Pragati Kakade</value>
        </filters>
        <label>Engineering Item Master_PK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Engineering_Item_Master_Phantoms</fullName>
        <columns>NAME</columns>
        <columns>rstk__peitem_div__c</columns>
        <columns>rstk__peitem_item__c</columns>
        <columns>rstk__peitem_descr__c</columns>
        <columns>rstk__peitem_src_pl__c</columns>
        <columns>rstk__peitem_type_pl__c</columns>
        <columns>rstk__peitem_tracklot_pl__c</columns>
        <columns>rstk__peitem_tracksrl_pl__c</columns>
        <columns>rstk__peitem_iccomcod__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__peitem_type_pl__c</field>
            <operation>equals</operation>
            <value>Phantom</value>
        </filters>
        <label>Engineering Item Master - Phantoms</label>
    </listViews>
    <listViews>
        <fullName>rstk__All6</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Eng_Item_Mastbccer2</fullName>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__peitem_div__c</columns>
        <columns>rstk__peitem_item__c</columns>
        <columns>rstk__peitem_iccomcod__c</columns>
        <columns>rstk__peitem_itemtype__c</columns>
        <columns>rstk__peitem_type_pl__c</columns>
        <columns>rstk__peitem_tracklot_pl__c</columns>
        <columns>rstk__peitem_tracksrl_pl__c</columns>
        <columns>rstk__peitem_status_pl__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__peitem_div__c</field>
            <operation>contains</operation>
            <value>WF4</value>
        </filters>
        <label>Eng Item Masterbcc</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Eng_Item_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__peitem_div__c</columns>
        <columns>rstk__peitem_item__c</columns>
        <columns>rstk__peitem_iccomcod__c</columns>
        <columns>rstk__peitem_fifoind__c</columns>
        <columns>rstk__peitem_type_pl__c</columns>
        <columns>rstk__peitem_respeng__c</columns>
        <columns>rstk__peitem_respengind__c</columns>
        <columns>rstk__formula_respeng__c</columns>
        <columns>rstk__peitem_tracklot_pl__c</columns>
        <columns>rstk__peitem_tracksrl_pl__c</columns>
        <columns>rstk__peitem_status_pl__c</columns>
        <columns>rstk__peitem_enguom__c</columns>
        <columns>rstk__peitem_invdiv__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Eng Item Master</label>
        <language>en_US</language>
    </listViews>
</CustomObject>